bk_ida/gccida/g1/fold_binary_op_with_conditional_arg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5305:44: error: must use 'enum' tag to refer to type 'tree_code'
tree  fold_binary_op_with_conditional_arg( tree_code code, tree type, tree cond, tree arg, int cond_first_p) 
                                           ^
                                           enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5311:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5314:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5315:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5316:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5317:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5318:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5319:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5320:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5324:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code rhs_code; // [rsp+10h] [rbp-78h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5325:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code lhs_code; // [rsp+14h] [rbp-74h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5326:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *lhs_type; // [rsp+18h] [rbp-70h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5329:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rhs_type; // [rsp+30h] [rbp-58h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5361:25: error: expected expression
lhs_type = ( tree_node *)*( &global_trees + 27); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5361:14: error: use of undeclared identifier 'tree_node'
lhs_type = ( tree_node *)*( &global_trees + 27); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5385:25: error: expected expression
rhs_type = ( tree_node *)*( &global_trees + 27); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/fold-const.c:5385:14: error: use of undeclared identifier 'tree_node'
rhs_type = ( tree_node *)*( &global_trees + 27); 
             ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/fold_binary_op_with_conditional_arg/src/obj/fold-const.o] Error 1
